--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "preinstall": "",
-    "postinstall": "patch-package",
+    "postinstall": "",
     "prebuild": "",
     "build": "rimraf dist/ && babel src/ --out-dir dist/",
     "postbuild": "",
@@ -27,7 +27,7 @@
     "node": "10.x"
   },
   "dependencies": {
-    "chatexchange": "^0.2.4-dev",
+    "chatexchange": "file:lib/chatexchange",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
     "flat-cache": "^2.0.1",
@@ -41,8 +41,8 @@
     "@babel/core": "^7.4.0",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.2",
+    "copyfiles": "^2.1.0",
     "dotenv": "^6.2.0",
-    "patch-package": "^6.1.0",
     "rimraf": "^2.6.3"
   }
 }
