--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "Simple election chatbot",
   "main": "src/index.js",
   "scripts": {
-    "preinstall": "",
-    "postinstall": "",
-    "prebuild": "",
     "build": "rimraf dist/ && babel src/ --out-dir dist/",
-    "postbuild": "",
     "start": "node dist/index.js",
     "dev": "babel-node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,7 +23,7 @@
     "node": "10.x"
   },
   "dependencies": {
-    "chatexchange": "file:lib/chatexchange",
+    "chatexchange": "^0.2.3-dev",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
     "flat-cache": "^2.0.1",
@@ -41,7 +37,6 @@
     "@babel/core": "^7.4.0",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.2",
-    "copyfiles": "^2.1.0",
     "dotenv": "^6.2.0",
     "rimraf": "^2.6.3"
   }
