--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "se-electionbot",
-  "version": "0.0.1",
-  "description": "Simple election chatbot",
+  "version": "0.1",
+  "description": "Stack Exchange Election Bot",
   "main": "src/index.js",
   "scripts": {
     "build": "rimraf dist/ && babel src/ --out-dir dist/",
@@ -9,12 +9,12 @@
     "dev": "babel-node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "Samuel Liew",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/samliew/se-electionbot.git"
   },
-  "author": "Samuel Liew",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/samliew/se-electionbot/issues"
   },
