--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Stack Exchange Election Bot",
   "main": "src/index.js",
   "scripts": {
-    "build": "rimraf dist/ && babel src/ --out-dir dist/",
+    "build": "npm run test && rimraf dist/ && babel src/ --out-dir dist/",
     "start": "node dist/index.js",
     "dev": "babel-node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Samuel Liew",
   "license": "MIT",
@@ -37,7 +37,11 @@
     "@babel/core": "^7.10.3",
     "@babel/node": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "dotenv": "^6.2.0",
+    "jshint": "^2.11.1",
+    "mocha": "^8.0.1",
     "rimraf": "^2.7.1"
   }
 }
