--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "request": "launch",
             "name": "Debug",
             "program": "${workspaceFolder}/src/index.js",
-            "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/babel-node",
+            "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/babel-node.cmd",
             "runtimeArgs": ["--nolazy"],
             "env": {
               "BABEL_ENV": "debug"
