--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "dotenv": "^6.2.0",
-    "rimraf": "^2.7.1"
+    "rimraf": "^2.7.1",
+    "typescript": "^4.3.2"
   }
 }
