--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "node": "10.x"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "chatexchange": "^0.2.3-dev",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
@@ -39,6 +38,8 @@
     "@babel/core": "^7.10.5",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "@types/cheerio": "^0.22.29",
+    "@types/express": "^4.17.12",
     "dotenv": "^6.2.0",
     "rimraf": "^2.7.1",
     "typescript": "^4.3.2"
