--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Samuel Liew",
+  "contributors": [
+    "Oleg Valter"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -37,9 +40,15 @@
     "@babel/core": "^7.10.5",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "@types/chai": "^4.2.18",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/cheerio": "^0.22.29",
     "@types/express": "^4.17.12",
+    "@types/mocha": "^8.2.2",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "dotenv": "^6.2.0",
+    "mocha": "^9.0.0",
     "rimraf": "^2.7.1",
     "typescript": "^4.3.2"
   }
