--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rimraf dist/ && babel src/ --out-dir dist/",
     "start": "node dist/index.js",
     "dev": "babel-node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require @babel/register"
   },
   "author": "Samuel Liew",
   "contributors": [
@@ -40,6 +40,7 @@
     "@babel/core": "^7.10.5",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "@babel/register": "^7.13.16",
     "@types/chai": "^4.2.18",
     "@types/chai-as-promised": "^7.1.4",
     "@types/cheerio": "^0.22.29",
