--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@ updates:
     directory: "/"
     open-pull-requests-limit: 10
     rebase-strategy: "auto"
-    target-branch: "master"
+    target-branch: "dependencies"
     labels:
       - "chores"
     schedule:
