specified module as ESM in TS config for dev purpuses

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "moduleResolution": "node",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
-    "module": "CommonJS"
+    "module": "es2020"
   }
 }
