--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rimraf dist/ && babel src/ --out-dir dist/",
     "start": "node dist/index.js",
     "dev": "babel-node src/index.js",
-    "test": "mocha --require @babel/register"
+    "test": "mocha"
   },
   "author": "Samuel Liew",
   "contributors": [
@@ -52,5 +52,6 @@
     "mocha": "^9.0.3",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.5"
-  }
+  },
+  "type": "module"
 }
