moved to ESM compilation

--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,13 @@
 {
-    "presets": [
-        [
-            "@babel/preset-env",
-            {
-                "targets": {
-                    "esmodules": true
-                }
-            }
-        ]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "esmodules": true
+        },
+        "modules": false
+      }
     ]
+  ]
 }
