included api key in the CI env to automate integration tests

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,5 +18,7 @@ jobs:
         run: npm ci
       - name: Run tests
         run: npm run test
+        env:
+          STACK_API_KEY: ${{ secrets.STACK_API_KEY }}
       - name: "Run build"
         run: npm run build
