--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "express": "^4.16.4",
     "html-entities": "^2.3.2",
     "node-cron": "^3.0.0",
-    "patch-package": "^6.2.2"
+    "patch-package": "^6.2.2",
+    "rss-parser": "^3.12.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
