--- a/package.json
+++ b/package.json
@@ -58,11 +58,13 @@
     "@types/jsdom": "^16.2.13",
     "@types/mocha": "^9.0.0",
     "@types/node-cron": "^2.0.4",
+    "@types/sinon": "^10.0.2",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "jsdom": "^17.0.0",
     "mocha": "^9.0.3",
     "rimraf": "^3.0.2",
+    "sinon": "^11.1.2",
     "typescript": "^4.3.5"
   },
   "type": "module"
