--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "@types/chai-as-promised": "^7.1.4",
     "@types/cheerio": "^0.22.30",
     "@types/express": "^4.17.13",
+    "@types/jsdom": "^16.2.13",
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
+    "jsdom": "^17.0.0",
     "mocha": "^9.0.3",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.5"
