--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/express": "^4.17.13",
     "@types/jsdom": "^16.2.13",
     "@types/mocha": "^9.0.0",
+    "@types/node-cron": "^2.0.4",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "jsdom": "^17.0.0",
