--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,5 +20,6 @@ jobs:
         run: npm run test
         env:
           STACK_API_KEY: ${{ secrets.STACK_API_KEY }}
+          HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
       - name: "Run build"
         run: npm run build
