--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "html-entities": "^2.3.2",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.0",
     "patch-package": "^6.2.2"
   },
