--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "moduleResolution": "node",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
+    "strictNullChecks": true,
     "noUnusedLocals": true,
     "module": "es2020"
   }
