--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "rimraf dist/ && babel src/ --out-dir dist/",
     "start": "node dist/index.js",
     "dev": "babel-node src/index.js",
-    "test": "mocha"
+    "test": "mocha",
+    "coverage": "c8 mocha"
   },
   "author": {
     "name": "Samuel Liew",
@@ -55,6 +56,7 @@
     "@types/cheerio": "^0.22.30",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.0.0",
+    "c8": "^7.9.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "mocha": "^9.0.3",
