--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,5 +21,6 @@ jobs:
         env:
           STACK_API_KEYS: ${{ secrets.STACK_API_KEYS }}
           HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
       - name: "Run build"
         run: npm run build
