added helper for matching and parsing a number at the same time without risking runtime errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
     "noUnusedLocals": true,
-    "module": "es2020"
+    "module": "es2020",
+    "paths": {
+      "@utils/*": ["./src/utils/*"]
+    }
   }
 }
