--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "chai-as-promised": "^7.1.1",
     "mocha": "^9.0.3",
     "rimraf": "^3.0.2",
+    "sinon": "^11.1.2",
     "typescript": "^4.3.5"
   },
   "type": "module"
