--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^5.3.1",
     "@types/mocha": "^9.0.0",
+    "@types/sinon": "^10.0.4",
     "@userscripters/stackexchange-api-types": "^0.3.0",
     "c8": "^7.9.0",
     "chai": "^4.3.4",
