--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.0",
     "patch-package": "^6.2.2",
-    "rm": "^0.1.8"
+    "rm": "^0.1.8",
+    "sanitize-html": "^2.5.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
@@ -60,6 +61,7 @@
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^5.3.1",
     "@types/mocha": "^9.0.0",
+    "@types/sanitize-html": "^2.3.2",
     "@types/sinon": "^10.0.4",
     "@userscripters/stackexchange-api-types": "^0.3.0",
     "c8": "^7.9.0",
