--- a/package.json
+++ b/package.json
@@ -1,77 +1,77 @@
 {
-  "name": "se-electionbot",
-  "version": "1.0.0",
-  "description": "ElectionBot - a chatbot that answers commonly-asked questions in chat rooms about elections for sites on the Stack Exchange network.",
-  "main": "src/index.js",
-  "scripts": {
-    "typecheck": "tsc --noEmit",
-    "postinstall": "patch-package",
-    "build": "rimraf dist/ && babel src/ --out-dir dist/",
-    "start": "node dist/index.js",
-    "dev": "babel-node src/index.js",
-    "test": "npm run typecheck && mocha",
-    "coverage": "c8 mocha"
-  },
-  "author": {
-    "name": "Samuel Liew",
-    "url": "https://so-user.com/584192?tab=profile"
-  },
-  "contributors": [
-    {
-      "name": "Oleg Valter",
-      "url": "https://stackoverflow.com/users/11407695"
-    }
-  ],
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/samliew/se-electionbot.git"
-  },
-  "bugs": {
-    "url": "https://github.com/samliew/se-electionbot/issues"
-  },
-  "homepage": "https://github.com/samliew/se-electionbot#readme",
-  "engines": {
-    "npm": "7.x",
-    "node": "14.x"
-  },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "chatexchange": "^0.5.1",
-    "cheerio": "^1.0.0-rc.10",
-    "dotenv": "^10.0.0",
-    "express": "^4.16.4",
-    "express-handlebars": "^5.3.4",
-    "heroku-client": "^3.1.0",
-    "html-entities": "^2.3.2",
-    "node-cache": "^5.1.2",
-    "node-cron": "^3.0.0",
-    "patch-package": "^6.2.2",
-    "rm": "^0.1.8",
-    "sanitize-html": "^2.5.1"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.0",
-    "@babel/node": "^7.14.9",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/register": "^7.14.5",
-    "@types/chai": "^4.2.21",
-    "@types/chai-as-promised": "^7.1.4",
-    "@types/cheerio": "^0.22.30",
-    "@types/express": "^4.17.13",
-    "@types/express-handlebars": "^5.3.1",
-    "@types/mocha": "^9.0.0",
-    "@types/sanitize-html": "^2.3.2",
-    "@types/sinon": "^10.0.4",
-    "@userscripters/stackexchange-api-types": "^0.3.0",
-    "c8": "^7.9.0",
-    "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
-    "mocha": "^9.0.3",
-    "rimraf": "^3.0.2",
-    "sinon": "^11.1.2",
-    "typescript": "^4.3.5"
-  },
-  "type": "module"
+    "name": "se-electionbot",
+    "version": "1.0.0",
+    "description": "ElectionBot - a chatbot that answers commonly-asked questions in chat rooms about elections for sites on the Stack Exchange network.",
+    "main": "src/index.js",
+    "scripts": {
+        "typecheck": "tsc --noEmit -p ./tsconfig.json",
+        "postinstall": "patch-package",
+        "build": "rimraf dist/ && babel src/ --out-dir dist/",
+        "start": "node dist/index.js",
+        "dev": "babel-node src/index.js",
+        "test": "npm run typecheck && mocha",
+        "coverage": "c8 mocha"
+    },
+    "author": {
+        "name": "Samuel Liew",
+        "url": "https://so-user.com/584192?tab=profile"
+    },
+    "contributors": [
+        {
+            "name": "Oleg Valter",
+            "url": "https://stackoverflow.com/users/11407695"
+        }
+    ],
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/samliew/se-electionbot.git"
+    },
+    "bugs": {
+        "url": "https://github.com/samliew/se-electionbot/issues"
+    },
+    "homepage": "https://github.com/samliew/se-electionbot#readme",
+    "engines": {
+        "npm": "7.x",
+        "node": "14.x"
+    },
+    "dependencies": {
+        "axios": "^0.21.1",
+        "chatexchange": "^0.5.1",
+        "cheerio": "^1.0.0-rc.10",
+        "dotenv": "^10.0.0",
+        "express": "^4.16.4",
+        "express-handlebars": "^5.3.4",
+        "heroku-client": "^3.1.0",
+        "html-entities": "^2.3.2",
+        "node-cache": "^5.1.2",
+        "node-cron": "^3.0.0",
+        "patch-package": "^6.2.2",
+        "rm": "^0.1.8",
+        "sanitize-html": "^2.5.1"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.14.8",
+        "@babel/core": "^7.15.0",
+        "@babel/node": "^7.14.9",
+        "@babel/preset-env": "^7.15.0",
+        "@babel/register": "^7.14.5",
+        "@types/chai": "^4.2.21",
+        "@types/chai-as-promised": "^7.1.4",
+        "@types/cheerio": "^0.22.30",
+        "@types/express": "^4.17.13",
+        "@types/express-handlebars": "^5.3.1",
+        "@types/mocha": "^9.0.0",
+        "@types/sanitize-html": "^2.3.2",
+        "@types/sinon": "^10.0.4",
+        "@userscripters/stackexchange-api-types": "^0.3.0",
+        "c8": "^7.9.0",
+        "chai": "^4.3.4",
+        "chai-as-promised": "^7.1.1",
+        "mocha": "^9.0.3",
+        "rimraf": "^3.0.2",
+        "sinon": "^11.1.2",
+        "typescript": "^4.3.5"
+    },
+    "type": "module"
 }
