--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "express-handlebars": "^5.3.4",
         "heroku-client": "^3.1.0",
         "html-entities": "^2.3.2",
+        "jsdom": "^18.0.0",
         "node-cache": "^5.1.2",
         "node-cron": "^3.0.0",
         "patch-package": "^6.2.2",
@@ -60,6 +61,7 @@
         "@types/cheerio": "^0.22.30",
         "@types/express": "^4.17.13",
         "@types/express-handlebars": "^5.3.1",
+        "@types/jsdom": "^16.2.13",
         "@types/mocha": "^9.0.0",
         "@types/sanitize-html": "^2.3.2",
         "@types/sinon": "^10.0.4",
