unified server-related files and assets under /server folder; tweaked references accordingly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
       "@utils/*": ["./src/utils/*"]
     }
   },
-  "include": ["src", "test"],
+  "include": ["src", "test", "server/index.js"],
   "exclude": ["dist"]
 }
