--- a/tsconfig.static.json
+++ b/tsconfig.static.json
@@ -4,6 +4,6 @@
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "noEmit": true
   },
-  "include": ["static"],
+  "include": ["server/static"],
   "exclude": ["node_modules", "src", "dist", "test"]
 }
