--- a/tsconfig.static.json
+++ b/tsconfig.static.json
@@ -1,9 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "lib": ["ESNext", "DOM", "DOM.Iterable"],
-    "noEmit": true
+    "noEmit": true,
+    "lib": ["ESNext", "DOM", "DOM.Iterable"]
   },
   "include": ["server/static"],
-  "exclude": ["node_modules", "src", "dist", "test"]
+  "exclude": ["dist", "node_modules", "coverage", "test", "src"]
 }
