forgot to update 'npm typecheck' TS project

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/bot/index.js",
     "scripts": {
         "build": "rimraf dist && tsc --project tsconfig.bot.json",
-        "typecheck": "tsc --noEmit -p ./tsconfig.json",
+        "typecheck": "tsc --noEmit -p ./tsconfig.bot.json",
         "start": "node dist/bot/index.js",
         "dev": "babel-node src/bot/index.js",
         "test": "npm run typecheck && mocha",
