--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "build": "rimraf dist && npm run copy-files && tsc --project tsconfig.bot.json",
         "typecheck": "tsc --noEmit -p ./tsconfig.bot.json",
+        "typecheck:tests": "tsc --noEmit -p ./tsconfig.test.json",
         "start": "node dist/bot/index.js",
         "dev": "node src/bot/index.js",
         "test": "npm run typecheck && mocha",
