added Markdown table parsing (closes #164)

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "heroku-client": "^3.1.0",
         "html-entities": "^2.3.2",
         "jsdom": "^18.0.0",
+        "markdown-it": "^12.3.2",
         "node-cache": "^5.1.2",
         "node-cron": "^3.0.0",
         "patch-package": "^6.2.2",
@@ -60,6 +61,7 @@
         "@types/express-handlebars": "^5.3.1",
         "@types/heroku-client": "^3.1.0",
         "@types/jsdom": "^16.2.13",
+        "@types/markdown-it": "^12.2.3",
         "@types/mocha": "^9.0.0",
         "@types/ramda": "^0.27.45",
         "@types/sanitize-html": "^2.3.2",
