--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,8 @@
 {
     "$schema": "https://json.schemastore.org/mocharc.json",
     "bail": true,
-    "recursive": true
+    "recursive": true,
+    "loader": [
+        "ts-node/esm"
+    ]
 }
