--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "typecheck": "tsc --noEmit -p ./tsconfig.bot.json",
         "typecheck:tests": "tsc --noEmit -p ./tsconfig.test.json",
         "start": "node dist/bot/index.js",
-        "dev": "node src/bot/index.js",
+        "dev": "node --loader ts-node/esm src/bot/index.js",
         "test": "npm run typecheck && mocha",
         "coverage": "c8 mocha",
         "copy-files": "copyup \"src/server/**/*\" dist/"
@@ -74,6 +74,7 @@
         "mocha": "^9.0.3",
         "rimraf": "^3.0.2",
         "sinon": "^11.1.2",
+        "ts-node": "^10.7.0",
         "typescript": "^4.6.2"
     },
     "type": "module"
