--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "@types/jsdom": "^16.2.13",
         "@types/markdown-it": "^12.2.3",
         "@types/mocha": "^9.0.0",
+        "@types/node-cron": "^3.0.1",
         "@types/ramda": "^0.27.45",
         "@types/sanitize-html": "^2.3.2",
         "@types/sinon": "^10.0.4",
