--- a/.mocharc.json
+++ b/.mocharc.json
@@ -2,6 +2,7 @@
     "$schema": "https://json.schemastore.org/mocharc.json",
     "bail": true,
     "recursive": true,
+    "exit": true,
     "loader": [
         "ts-node/esm"
     ]
