--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     },
     "dependencies": {
         "axios": "^0.27.2",
+        "bootstrap": "^5.1.3",
         "chatexchange": "^0.6.4",
         "cheerio": "^1.0.0-rc.11",
         "dotenv": "^10.0.0",
