--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "chai": "^4.3.4",
         "chai-as-promised": "^7.1.1",
         "copyfiles": "^2.4.1",
+        "handlebars": "^4.7.7",
         "mocha": "^9.2.2",
         "node-sass": "^7.0.1",
         "node-sass-package-importer": "^5.3.2",
