--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     },
     "dependencies": {
         "axios": "^0.27.2",
+        "bootstrap": "^5.1.3",
         "chatexchange": "^0.6.4",
         "cheerio": "^1.0.0-rc.12",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
-        "bootstrap": "^5.1.3",
         "express-handlebars": "^6.0.6",
         "heroku-client": "^3.1.0",
         "html-entities": "^2.3.3",
@@ -57,7 +57,8 @@
         "node-cron": "^3.0.1",
         "patch-package": "^6.4.7",
         "ramda": "^0.28.0",
-        "sanitize-html": "^2.7.0"
+        "sanitize-html": "^2.7.0",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@types/chai": "^4.3.1",
@@ -77,14 +78,14 @@
         "chai": "^4.3.6",
         "chai-as-promised": "^7.1.1",
         "copyfiles": "^2.4.1",
+        "handlebars": "^4.7.7",
         "mocha": "^10.0.0",
+        "node-sass": "^7.0.1",
+        "node-sass-package-importer": "^5.3.2",
         "rimraf": "^3.0.2",
         "sinon": "^14.0.0",
         "ts-node": "^10.8.1",
-        "typescript": "^4.7.4",
-        "handlebars": "^4.7.7",
-        "node-sass": "^7.0.1",
-        "node-sass-package-importer": "^5.3.2"
+        "typescript": "^4.7.4"
     },
     "type": "module"
 }
