prepared Mocha to use chai-as-promised

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -5,5 +5,9 @@
     "exit": true,
     "loader": [
         "ts-node/esm"
-    ]
+    ],
+    "require": [
+        "./test/setup.js"
+    ],
+    "timeout": 5000
 }
