added NPM script to run all type checks

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
         "heroku:all": "sh ./heroku-deploy.sh",
         "typecheck": "tsc --noEmit -p ./tsconfig.bot.json",
         "typecheck:tests": "tsc --noEmit -p ./tsconfig.test.json",
+        "typecheck:all": "npm run typecheck && npm run typecheck:tests",
         "start": "node dist/bot/index.js",
         "dev": "npm run scss:dev && node --loader ts-node/esm src/bot/index.js",
-        "test": "npm run typecheck && mocha",
+        "test": "npm run typecheck:all && mocha",
         "test:integration": "npm run typecheck && mocha -- test/integration/**/*.js",
         "test:unit": "npm run typecheck && mocha -- test/unit/**/*.js",
         "coverage": "c8 mocha",
