VSC settings: import module specifiers should always be full

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
   "[css]": {
     "editor.tabSize": 2,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "javascript.preferences.importModuleSpecifierEnding": "js"
 }
