--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
         "bootstrap": "^5.1.3",
         "chatexchange": "^0.6.5",
         "cheerio": "^1.0.0-rc.12",
+        "chess.js": "^1.0.0-alpha.0",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-handlebars": "^6.0.6",
         "heroku-client": "^3.1.0",
         "html-entities": "^2.3.3",
+        "js-chess-engine": "^1.0.2",
         "jsdom": "^20.0.0",
         "markdown-it": "^13.0.1",
         "node-cache": "^5.1.2",
@@ -65,6 +67,7 @@
         "@types/chai": "^4.3.1",
         "@types/chai-as-promised": "^7.1.5",
         "@types/cheerio": "^0.22.31",
+        "@types/chess.js": "^0.13.4",
         "@types/express": "^4.17.13",
         "@types/heroku-client": "^3.1.0",
         "@types/jsdom": "^16.2.14",
