--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,8 @@
 name: Update dependencies
 
 on:
-  #schedule:
-  #  - cron: "00 23 * * 0"
+  schedule:
+    - cron: "00 23 * * 0"
   workflow_dispatch:
 
 jobs:
